--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
+    android:background="@color/gray"
     >
 
    <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,6 +26,7 @@
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="-50dp"
            android:textSize="30sp"
+           android:textColor="@color/white"
            />
 
        <TextView
@@ -37,8 +39,247 @@
            app:layout_constraintTop_toBottomOf="@id/calculo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="40sp"
+           android:textColor="@color/rosa"
            />
 
    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TableRow android:layout_weight="1">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/ce"
+                android:text="CE"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/parentese_abrindo"
+                android:text="("
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/parentese_fechando"
+                android:text=")"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/divisao"
+                android:text="/"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+
+
+        <TableRow android:layout_weight="1">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/sete"
+                android:text="7"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/oito"
+                android:text="8"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/nove"
+                android:text="9"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/multiplicacao"
+                android:text="*"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+
+        <TableRow android:layout_weight="1">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/quatro"
+                android:text="4"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/cinco"
+                android:text="5"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/seis"
+                android:text="6"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/subtracao"
+                android:text="-"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+
+        <TableRow android:layout_weight="1">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/um"
+                android:text="1"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/dois"
+                android:text="2"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/tres"
+                android:text="3"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/adicao"
+                android:text="+"
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+
+
+        <TableRow android:layout_weight="1">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/ponto"
+                android:text="."
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/virgula"
+                android:text=","
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/zero"
+                android:text="0"
+                android:background="@color/vinho"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/igual"
+                android:text="="
+                android:background="@color/black"
+                android:textColor="@color/rosa"
+                android:layout_margin="2dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
