--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#121212</color>
+    <color name="vinho">#210A12</color>
+    <color name="rosa">#CA6384</color>
 </resources>
